--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "better-scroll": "^2.1.1",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
+    "swiper": "^6.4.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
